[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "provenance_guard"
version = "1.0.0"
dependencies = [
    "flask>=3.0.0",
    "flask-limiter>=3.5.0",
    "groq==0.15.0",
    "python-dotenv==1.0.1",
]

[tool.setuptools]
packages = ["queries"]

[tool.setuptools.package-dir]
"" = "."